--- a/css/resume.css
+++ b/css/resume.css
@@ -91,7 +91,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #d48a6e;
+  outline-color: rgb(72, 74, 235);
 }
 
 @media (min-width: 992px) {
