--- a/css/resume.css
+++ b/css/resume.css
@@ -59,7 +59,7 @@ p.lead {
   display: inline-block;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #394f66;
   color: #fff !important;
   border-radius: 100%;
   text-align: center;
