--- a/css/resume.css
+++ b/css/resume.css
@@ -15,6 +15,8 @@ body {
     padding-top: 0;
     /* padding-left: 17rem; */
     padding-left: 0;
+    /* background-image: url("bricks.png");
+    background-repeat: repeat; */
   }
 }
 
