--- a/css/resume.css
+++ b/css/resume.css
@@ -8,6 +8,8 @@ body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Calibri, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
   color: #868e96;
+  background-image: url("pattern.png");
+  background-repeat: repeat;
 }
 
 @media (min-width: 992px) {
@@ -15,7 +17,7 @@ body {
     padding-top: 0;
     /* padding-left: 17rem; */
     padding-left: 0;
-    /* background-image: url("bricks.png");
+    /* background-image: url("img/grad1.png");
     background-repeat: repeat; */
     padding-right: 21rem;
   }
